2006-05-29  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py: New module to run scripts as if manually
	typed into an interactive environment, based on pexpect.  After a
	submission by Ken Schutte <kschutte-AT-csail.mit.edu> on the
	ipython-user list.  Simple unittests in the tests/ directory.

	* tools/release: add Will Maier, OpenBSD port maintainer, to
	recepients list.  We are now officially part of the OpenBSD ports:
	http://www.openbsd.org/ports.html !  Many thanks to Will for the
	work.

2006-05-26  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ipmaker.py (make_IPython): modify sys.argv fix (below)
	so that it doesn't break tkinter apps.
	
	* IPython/iplib.py (_prefilter): fix bug where aliases would
	shadow variables when autocall was fully off.  Reported by SAGE
	author William Stein.

	* IPython/OInspect.py (Inspector.__init__): add a flag to control
	at what detail level strings are computed when foo? is requested.
	This allows users to ask for example that the string form of an
	object is only computed when foo?? is called, or even never, by
	setting the object_info_string_level >= 2 in the configuration
	file.  This new option has been added and documented.  After a
	request by SAGE to be able to control the printing of very large
	objects more easily.

2006-05-25  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ipmaker.py (make_IPython): remove the ipython call path
	from sys.argv, to be 100% consistent with how Python itself works
	(as seen for example with python -i file.py).  After a bug report
	by Jeffrey Collins.

	* IPython/Shell.py (MatplotlibShellBase._matplotlib_config): Fix
	nasty bug which was preventing custom namespaces with -pylab,
	reported by M. Foord.  Minor cleanup, remove old matplotlib.matlab
	compatibility (long gone from mpl).

	* IPython/ipapi.py (make_session): name change: create->make.  We
	use make in other places (ipmaker,...), it's shorter and easier to